--- a/vignettes/EpiCurve.Rmd
+++ b/vignettes/EpiCurve.Rmd
@@ -298,7 +298,7 @@ kable(DF)
 ```{r fig.width=4.5, fig.height=4.5}
 EpiCurve(DF,
          date = "date",
-#         freq = "value",
+         freq = "value",
          period = "month",
          ylabel="Number of cases",
          xlabel=sprintf("From %s to %s", min(DF$date), max(DF$date)),
